--- a/KanskeKulSpel/imgui.ini
+++ b/KanskeKulSpel/imgui.ini
@@ -249,7 +249,7 @@ Size=500,500
 Collapsed=0
 
 [Window][Profolio, MicSec!]
-Pos=977,116
+Pos=994,36
 Size=781,219
 Collapsed=0
 
@@ -274,7 +274,7 @@ Size=61,57
 Collapsed=0
 
 [Window][Turbosole]
-Pos=980,187
+Pos=979,187
 Size=500,600
 Collapsed=0
 
@@ -309,7 +309,7 @@ Size=471,502
 Collapsed=0
 
 [Window][Pickle a Particle]
-Pos=1139,292
+Pos=1203,297
 Size=607,631
 Collapsed=0
 
@@ -331,5 +331,10 @@ Collapsed=0
 [Window][Recipe Editor]
 Pos=1183,284
 Size=598,452
+Collapsed=0
+
+[Window][Tendril Test Facility]
+Pos=1103,291
+Size=526,451
 Collapsed=0
 
