particles can have lightning effects if they want

--- a/KanskeKulSpel/KanskeKulSpel.vcxproj.filters
+++ b/KanskeKulSpel/KanskeKulSpel.vcxproj.filters
@@ -222,13 +222,13 @@
     <ClCompile Include="src\Game\Entities\Enemies\Bosses\Boss.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\Game\Item\Spell\Lightning\Tendril.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="src\Game\Item\Spell\Lightning\TendrilTester.h">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\Game\Item\Spell\Lightning\TendrilTester.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Game\Particles\Tendril.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -494,7 +494,7 @@
     <ClInclude Include="src\Game\Entities\Hazard.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\Game\Item\Spell\Lightning\Tendril.h">
+    <ClInclude Include="src\Game\Particles\Tendril.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
