Heh alot happened, mainly projectiles

--- a/KanskeKulSpel/KanskeKulSpel.vcxproj
+++ b/KanskeKulSpel/KanskeKulSpel.vcxproj
@@ -158,15 +158,16 @@
     <ClCompile Include="src\Game\Entities\Enemies\Grunt.cpp" />
     <ClCompile Include="src\Game\Item\Item.cpp" />
     <ClCompile Include="src\Game\Item\ItemEditor.cpp" />
-    <ClCompile Include="src\Game\Item\ProjectileHandler.cpp" />
+    <ClCompile Include="src\Game\Item\Projectile\LightProjectile.cpp" />
+    <ClCompile Include="src\Game\Item\Projectile\ProjectileHandler.cpp" />
     <ClCompile Include="src\Game\Item\RecipeEditor.cpp" />
-    <ClCompile Include="src\Game\Item\Spell\Fireball.cpp" />
+    <ClCompile Include="src\Game\Item\Projectile\Spell\Fireball.cpp" />
     <ClCompile Include="src\Game\Particles\Tendril.cpp" />
-    <ClCompile Include="src\Game\Item\Spell\Lightning\TendrilTester.cpp" />
-    <ClCompile Include="src\Game\Item\Spell\Lightning\TendrilTester.h" />
-    <ClCompile Include="src\Game\Item\Spell\Spell.cpp" />
-    <ClCompile Include="src\Game\Item\Spell\Tome.cpp" />
-    <ClCompile Include="src\Game\Item\Throwables\Throwable.cpp" />
+    <ClCompile Include="src\Game\Particles\TendrilTester.cpp" />
+    <ClCompile Include="src\Game\Particles\TendrilTester.h" />
+    <ClCompile Include="src\Game\Item\Projectile\Spell\Spell.cpp" />
+    <ClCompile Include="src\Game\Item\Projectile\Spell\Tome.cpp" />
+    <ClCompile Include="src\Game\Item\Projectile\Throwables\Throwable.cpp" />
     <ClCompile Include="src\Game\Entities\Player.cpp" />
     <ClCompile Include="src\Game\Game.cpp" />
     <ClCompile Include="src\Game\GameState.cpp" />
@@ -233,13 +234,14 @@
     <ClInclude Include="src\Game\Item\Item.h" />
     <ClInclude Include="src\Game\Item\ItemEditor.h" />
     <ClInclude Include="src\Game\Interface\Recipe.h" />
-    <ClInclude Include="src\Game\Item\ProjectileHandler.h" />
+    <ClInclude Include="src\Game\Item\Projectile\LightProjectile.h" />
+    <ClInclude Include="src\Game\Item\Projectile\ProjectileHandler.h" />
     <ClInclude Include="src\Game\Item\RecipeEditor.h" />
-    <ClInclude Include="src\Game\Item\Spell\Fireball.h" />
+    <ClInclude Include="src\Game\Item\Projectile\Spell\Fireball.h" />
     <ClInclude Include="src\Game\Particles\Tendril.h" />
-    <ClInclude Include="src\Game\Item\Spell\Spell.h" />
-    <ClInclude Include="src\Game\Item\Spell\Tome.h" />
-    <ClInclude Include="src\Game\Item\Throwables\Throwable.h" />
+    <ClInclude Include="src\Game\Item\Projectile\Spell\Spell.h" />
+    <ClInclude Include="src\Game\Item\Projectile\Spell\Tome.h" />
+    <ClInclude Include="src\Game\Item\Projectile\Throwables\Throwable.h" />
     <ClInclude Include="src\Game\Entities\Player.h" />
     <ClInclude Include="src\Game\Game.h" />
     <ClInclude Include="src\Game\GameState.h" />
