Fireball fix and prompt when exiting

--- a/KanskeKulSpel/imgui.ini
+++ b/KanskeKulSpel/imgui.ini
@@ -249,7 +249,7 @@ Size=500,500
 Collapsed=0
 
 [Window][Profolio, MicSec!]
-Pos=857,26
+Pos=842,46
 Size=781,219
 Collapsed=0
 
@@ -274,7 +274,7 @@ Size=61,57
 Collapsed=0
 
 [Window][Turbosole]
-Pos=42,235
+Pos=1352,296
 Size=500,600
 Collapsed=0
 
@@ -336,5 +336,10 @@ Collapsed=0
 [Window][Tendril Test Facility]
 Pos=1264,294
 Size=560,486
+Collapsed=0
+
+[Window][Do you really want to quit? :(]
+Pos=733,274
+Size=279,80
 Collapsed=0
 
