--- a/KanskeKulSpel/KanskeKulSpel.vcxproj
+++ b/KanskeKulSpel/KanskeKulSpel.vcxproj
@@ -150,6 +150,7 @@
     <ClCompile Include="src\Game\Components\LogisticsComp.cpp" />
     <ClCompile Include="src\Game\Components\MovementComp.cpp" />
     <ClCompile Include="src\Game\Components\SpellComp.cpp" />
+    <ClCompile Include="src\Game\Components\StatusComp.cpp" />
     <ClCompile Include="src\Game\Components\TomeComp.cpp" />
     <ClCompile Include="src\Game\Components\SpriteComp.cpp" />
     <ClCompile Include="src\Game\Entities\Chain.cpp" />
@@ -159,6 +160,7 @@
     <ClCompile Include="src\Game\Entities\Enemies\Enemy.cpp" />
     <ClCompile Include="src\Game\Entities\Enemies\Grunt.cpp" />
     <ClCompile Include="src\Game\Entities\Entity.cpp" />
+    <ClCompile Include="src\Game\Item\Consumable.cpp" />
     <ClCompile Include="src\Game\Item\Item.cpp" />
     <ClCompile Include="src\Game\Item\ItemEditor.cpp" />
     <ClCompile Include="src\Game\Item\Projectile\LightProjectile.cpp" />
@@ -227,6 +229,7 @@
     <ClInclude Include="src\Game\Components\LogisticsComp.h" />
     <ClInclude Include="src\Game\Components\MovementComp.h" />
     <ClInclude Include="src\Game\Components\SpellComp.h" />
+    <ClInclude Include="src\Game\Components\StatusComp.h" />
     <ClInclude Include="src\Game\Components\TomeComp.h" />
     <ClInclude Include="src\Game\Components\SpriteComp.h" />
     <ClInclude Include="src\Game\Components\TransformComp.h" />
@@ -239,6 +242,7 @@
     <ClInclude Include="src\Game\Entities\Enemies\Grunt.h" />
     <ClInclude Include="src\Game\Entities\Entity.h" />
     <ClInclude Include="src\Game\Entities\Hazard.h" />
+    <ClInclude Include="src\Game\Item\Consumable.h" />
     <ClInclude Include="src\Game\Item\GatherItem.h" />
     <ClInclude Include="src\Game\Item\Item.h" />
     <ClInclude Include="src\Game\Item\ItemEditor.h" />
